--- a/PCompus_controller/src/main/webapp/pages/Dashboards.Default.html
+++ b/PCompus_controller/src/main/webapp/pages/Dashboards.Default.html
@@ -135,6 +135,7 @@
 </div>
 
 <div class="main container">
+    <span>校园调查数据</span>
     <div class="row">
         <div class="col-md-12 data-item-title">
             <ul class="nav nav-tabs" role="tablist" id="feature-tab">
@@ -206,6 +207,7 @@
 </div>
 
 <div class="main container main-container">
+    <span>校内校外实践</span>
     <div class="row">
         <div role="tabpanel" class="col-md-12 data-item-title">
             <!-- Nav tabs -->
@@ -263,7 +265,7 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
                                 <img
-                                        src="http://lorempixel.com/200/200/abstract"
+                                        src="/PCompus/static/img/product/small/michetta.jpg"
                                         alt=""
                                 />
                                 <div class="caption">
@@ -329,7 +331,7 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
                                 <img
-                                        src="http://lorempixel.com/200/200/abstract"
+                                        src="/PCompus/static/img/product/small/michetta.jpg"
                                         alt=""
                                 />
                                 <div class="caption">
@@ -366,7 +368,7 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
                                 <img
-                                        src="http://lorempixel.com/200/200/abstract"
+                                        src="/PCompus/static/img/product/small/michetta.jpg"
                                         alt=""
                                 />
                                 <div class="caption">
@@ -395,7 +397,7 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
                                 <img
-                                        src="http://lorempixel.com/200/200/abstract"
+                                        src="/PCompus/static/img/product/small/michetta.jpg"
                                         alt=""
                                 />
                                 <div class="caption">
@@ -432,7 +434,7 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
                                 <img
-                                        src="http://lorempixel.com/200/200/abstract"
+                                        src="/PCompus/static/img/product/small/michetta.jpg"
                                         alt=""
                                 />
                                 <div class="caption">
@@ -473,7 +475,7 @@
                     <div class="row masonry-container">
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
-                                <img src="http://lorempixel.com/200/200/city" alt=""/>
+                                <img src="/PCompus/static/img/product/small/sandwich-bread.jpg" alt=""/>
                                 <div class="caption">
                                     <h3>111</h3>
                                     <p>
@@ -536,7 +538,7 @@
 
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
-                                <img src="http://lorempixel.com/200/200/city" alt=""/>
+                                <img src="/PCompus/static/img/product/small/sandwich-bread.jpg" alt=""/>
                                 <div class="caption">
                                     <h3>Thumbnail label</h3>
                                     <p>
@@ -570,7 +572,7 @@
 
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
-                                <img src="http://lorempixel.com/200/200/city" alt=""/>
+                                <img src="/PCompus/static/img/product/small/sandwich-bread.jpg" alt=""/>
                                 <div class="caption">
                                     <h3>Thumbnail label</h3>
                                     <p>
@@ -596,7 +598,7 @@
 
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
-                                <img src="http://lorempixel.com/200/200/city" alt=""/>
+                                <img src="/PCompus/static/img/product/small/sandwich-bread.jpg" alt=""/>
                                 <div class="caption">
                                     <h3>Thumbnail label</h3>
                                     <p>
@@ -630,7 +632,7 @@
 
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
-                                <img src="http://lorempixel.com/200/200/city" alt=""/>
+                                <img src="/PCompus/static/img/product/small/sandwich-bread.jpg" alt=""/>
                                 <div class="caption">
                                     <h3>Thumbnail label</h3>
                                     <p>
@@ -670,7 +672,7 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
                                 <img
-                                        src="http://lorempixel.com/200/200/nature"
+                                        src="/PCompus/static/img/product/small/toast-bread.jpg"
                                         alt=""
                                 />
                                 <div class="caption">
@@ -736,7 +738,7 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
                                 <img
-                                        src="http://lorempixel.com/200/200/nature"
+                                        src="/PCompus/static/img/product/small/toast-bread.jpg"
                                         alt=""
                                 />
                                 <div class="caption">
@@ -773,7 +775,7 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
                                 <img
-                                        src="http://lorempixel.com/200/200/nature"
+                                        src="/PCompus/static/img/product/small/toast-bread.jpg"
                                         alt=""
                                 />
                                 <div class="caption">
@@ -802,7 +804,7 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
                                 <img
-                                        src="http://lorempixel.com/200/200/nature"
+                                        src="/PCompus/static/img/product/small/toast-bread.jpg"
                                         alt=""
                                 />
                                 <div class="caption">
@@ -839,7 +841,7 @@
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
                                 <img
-                                        src="http://lorempixel.com/200/200/nature"
+                                        src="/PCompus/static/img/product/small/toast-bread.jpg"
                                         alt=""
                                 />
                                 <div class="caption">
@@ -880,7 +882,7 @@
                     <div class="row masonry-container">
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
-                                <img src="http://lorempixel.com/200/200/cats" alt=""/>
+                                <img src="/PCompus/static/img/product/small/boule.jpg" alt=""/>
                                 <div class="caption">
                                     <h3>Thumbnail label</h3>
                                     <p>
@@ -943,7 +945,7 @@
 
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
-                                <img src="http://lorempixel.com/200/200/cats" alt=""/>
+                                <img src="/PCompus/static/img/product/small/boule.jpg" alt=""/>
                                 <div class="caption">
                                     <h3>Thumbnail label</h3>
                                     <p>
@@ -977,7 +979,7 @@
 
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
-                                <img src="http://lorempixel.com/200/200/cats" alt=""/>
+                                <img src="/PCompus/static/img/product/small/boule.jpg" alt=""/>
                                 <div class="caption">
                                     <h3>Thumbnail label</h3>
                                     <p>
@@ -1003,7 +1005,7 @@
 
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
-                                <img src="http://lorempixel.com/200/200/cats" alt=""/>
+                                <img src="/PCompus/static/img/product/small/boule.jpg" alt=""/>
                                 <div class="caption">
                                     <h3>Thumbnail label</h3>
                                     <p>
@@ -1037,7 +1039,7 @@
 
                         <div class="col-md-4 col-sm-6 item">
                             <div class="thumbnail">
-                                <img src="http://lorempixel.com/200/200/cats" alt=""/>
+                                <img src="/PCompus/static/img/product/small/boule.jpg" alt=""/>
                                 <div class="caption">
                                     <h3>Thumbnail label</h3>
                                     <p>
@@ -1077,6 +1079,150 @@
         <!--/.tab-panel  -->
     </div>
 </div>
+
+
+<div class="main container main-container">
+    <span>新闻公告</span>
+    <div class="row">
+
+        <div class="col-md-12 data-item-title">
+            <ul class="nav nav-tabs" role="tablist" id="news-tab">
+                <li id="todayNews-li">
+                    <a href="#news-tab" role="tab" data-toggle="tab">本周</a>
+                </li>
+            </ul>
+            <button class="btn btn-primary btn-refresh" id="refresh-news">刷新</button>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="row data-item jumbotron jumbotron-fluid">
+
+            <!--用来抵消，下面栅格的内部，跟标题保持一样的样式-->
+            <div class="col-sm-2">
+                <div class="hidden-xs list-group side-bar">
+                    <a href="https://www.bilibili.com/video/av21061574?from=search&seid=17225233772752021614"
+                       class="list-group-item active">澳门赌场</a>
+                    <a href="https://www.bilibili.com/video/av21061574?from=search&seid=17225233772752021614"
+                       class="list-group-item">美女真人</a>
+                    <a href="https://www.bilibili.com/video/av21061574?from=search&seid=17225233772752021614"
+                       class="list-group-item">在线发牌</a>
+                    <a href="news.html" class="list-group-item">快速到账</a>
+                    <a href="news.html" class="list-group-item">赔率感人</a>
+                    <a href="news.html" class="list-group-item">官方背景</a>
+                    <a href="news.html" class="list-group-item">隐私保密</a>
+                    <a href="news.html" class="list-group-item">绝对可靠</a>
+                    <a href="news.html" class="list-group-item">快来啊！</a>
+                </div>
+            </div>
+            <div class="col-sm-7">
+                <div class="news-list">
+                    <div class="news-list-item clearfix">
+                        <!--一定要清除浮动，不然排版不规范-->
+                        <div class="col-xs-5">
+                            <img src="/PCompus/static/img/product/small/barmbrack.jpg" alt="不知名男教师">
+                        </div>
+                        <div class="col-xs-7">
+                            <a href="news.html"
+                               class="title">六安舒城某一老师，因帅气逼人，被女学生迷奸。据了解，该男老师满嘴骚话，行为放诞不羁，看到女学生面目清秀，现情绪稳定</a>
+                            <div class="info">
+                                <span><span class="author"><img src="/PCompus/static/img/product/small/barmbrack.jpg"
+                                                                alt="头像"></span>祝老板写</span>.
+                                <span>25w阅读</span>.
+                                <span>5w评论</span>.
+                                <span>两天前</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news-list-item clearfix">
+                        <!--一定要清除浮动，不然排版不规范-->
+                        <div class="col-xs-5">
+                            <img src="/PCompus/static/img/product/small/barmbrack.jpg" alt="不知名男教师">
+                        </div>
+                        <div class="col-xs-7">
+                            <a href="news.html" class="title">突变：前天六安舒城祝姓男子，被迷奸事件变得扑朔迷离。某一网友，在今天微博上放出祝姓老师被捕时照片</a>
+                            <div class="info">
+                                <span><span class="author"><img src="/PCompus/static/img/product/small/barmbrack.jpg"
+                                                                alt="头像"></span>祝老板写</span>.
+                                <span>38w阅读</span>.
+                                <span>8w评论</span>.
+                                <span>一天前</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news-list-item clearfix">
+                        <!--一定要清除浮动，不然排版不规范-->
+                        <div class="col-xs-5">
+                            <img src="/PCompus/static/img/product/small/barmbrack.jpg" alt="不知名男教师">
+                        </div>
+                        <div class="col-xs-7">
+                            <a href="news.html" class="title">持续报道：该六安舒城老师，在校期间，经常在寝室室友中间，发表不正当言论，疑有犯罪冲动</a>
+                            <div class="info">
+                                <span><span class="author"><img src="/PCompus/static/img/product/small/barmbrack.jpg"
+                                                                alt="头像"></span>祝老板写</span>.
+                                <span>51w阅读</span>.
+                                <span>26w评论</span>.
+                                <span>两小时前</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="news-list-item clearfix">
+                        <div class="col-xs-5">
+                            <img src="/PCompus/static/img/product/small/barmbrack.jpg" alt="不知名男教师">
+                        </div>
+                        <div class="col-xs-7">
+                            <a href="news.html" class="title">解读：为何在2018年如此频繁的爆出老师性侵案件，到底是人性的扭曲还是道德的沦丧</a>
+                            <div class="info">
+                                <span><span class="author"><img src="/PCompus/static/img/product/small/barmbrack.jpg"
+                                                                alt="头像"></span>祝老板写</span>.
+                                <span>25w阅读</span>.
+                                <span>5w评论</span>.
+                                <span>2分钟前</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-3">
+                <div class="search-bar">
+                    <input type="search" class="form-control" placeholder="搜索本网站">
+                </div>
+                <div class="side-bar-card police clearfix">
+                    <!--清除浮动-->
+                    <div class="col-xs-5">
+                        <img src="/PCompus/static/img/product/small/barmbrack.jpg" alt="举报图片">
+                    </div>
+                    <div class="col-xs-7">
+                        <div class="note">绿色上网</div>
+                        <div>不良信息举报专栏</div>
+                        <div>举报电话：888888</div>
+                    </div>
+                </div>
+                <div class="side-bar-card ">
+                    <div class="card-title">老哥，我懂你系列</div>
+                    <div class="card-body">
+                        <div class="list">
+                            <div class="item">
+                                <div class="title">祝老师包养的女大学生，为何如此貌美如花</div>
+                                <div class="desc">300w点赞，20w评论</div>
+                            </div>
+                            <div class="item">
+                                <div class="title">祝老师包养的女大学生，为何如此貌美如花</div>
+                                <div class="desc">300w点赞，20w评论</div>
+                            </div>
+                            <div class="item">
+                                <div class="title">祝老师包养的女大学生，为何如此貌美如花</div>
+                                <div class="desc">300w点赞，20w评论</div>
+                            </div>
+                            <div class="item">
+                                <div class="title">祝老师包养的女大学生，为何如此貌美如花</div>
+                                <div class="desc">300w点赞，20w评论</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
 </div>
 
