一个mvc层子模块

--- a/PCompus_controller/src/main/webapp/pages/Dashboards.Default.html
+++ b/PCompus_controller/src/main/webapp/pages/Dashboards.Default.html
@@ -1225,6 +1225,79 @@
     </div>
 
 </div>
+<div class="main container main-container">
+    <div class="row">
+
+        <div class="col-md-12 data-item-title">
+            <ul class="nav nav-tabs" role="tablist" id="products-tab">
+                <li id="week-products-li">
+                    <a href="#news-tab" role="tab" data-toggle="tab">本周</a>
+                </li>
+                <li id="month-products-li">
+                    <a href="#news-tab" role="tab" data-toggle="tab">本月</a>
+                </li>
+            </ul>
+            <button class="btn btn-primary btn-refresh" id="refresh-products">刷新</button>
+        </div>
+    </div>
+    <div class="main-content">
+        <div class="row data-item jumbotron jumbotron-fluid">
+
+
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6"><!-- 大屏幕放3张略缩图，pc端放4张，平板和手机放6张-->
+                <div class="thumbnail">
+                    <img src="/PCompus/static/img/product/small/zopf.jpg" alt="..." class="img-responsive">
+                    <div class="caption">
+                        <h4>vivo X9s Plus</h4>
+                        <p>
+                            2000万柔光双摄内置&nbsp;&nbsp;震撼HIFI音效&nbsp;&nbsp;&nbsp;便捷一屏两用
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <!-- 第一张略缩图结束 -->
+
+            <!-- 第二张略缩图开始 -->
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+                <div class="thumbnail">
+                    <img src="/PCompus/static/img/product/small/zopf.jpg" alt="..." class="img-responsive">
+                    <div class="caption">
+                        <h4>华为畅享7</h4>
+                        <p>背部指纹0.5s解锁&nbsp;&nbsp;轻松并行多个APP&nbsp;&nbsp;智能文件管理</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 第二张略缩图结束 -->
+
+            <!-- 第三张略缩图开始 -->
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+                <div class="thumbnail">
+                    <img src="/PCompus/static/img/product/small/zopf.jpg" alt="..." class="img-responsive"
+                         style="width: 180px;height:180px">
+                    <div class="caption">
+                        <h4>vivo X9s</h4>
+                        <p>2000万柔光双摄&nbsp;&nbsp;内置震撼HIFI音效&nbsp;&nbsp;便捷一屏两用</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- 第三张略缩图结束 -->
+
+            <!-- 第四张略缩图开始 -->
+            <div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
+                <div class="thumbnail">
+                    <img src="/PCompus/static/img/product/small/zopf.jpg" alt="..." class="img-responsive"
+                         style="width: 180px;height:180px">
+                    <div class="caption">
+                        <h4>vivo X9s</h4>
+                        <p>2000万柔光双摄&nbsp;&nbsp;内置震撼HIFI音效&nbsp;&nbsp;便捷一屏两用</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 <div class="footer" style="width: 100%">
     <div class="myaudio">
