--- a/PCompus_controller/src/main/webapp/pages/Dashboards.Default.html
+++ b/PCompus_controller/src/main/webapp/pages/Dashboards.Default.html
@@ -14,8 +14,7 @@
     <script src="/PCompus/static/js/vendor/jquery-3.6.0.min.js"></script>
     <script src="/PCompus/static/js/vendor/bootstrap/bootstrap.min.js"></script>
     <script src="/PCompus/static/js/vendor/echarts.min.js"></script>
-    <script src="/PCompus/static/js/base/style.js"></script>
-    <script src="/PCompus/static/js/base/common.js"></script>
+
     <title>Document</title>
 </head>
 <!---->
@@ -43,9 +42,9 @@
                 <i class="iconfont icon-yingyong-nav" data-toggle="dropdown"></i>
                 <a class="nav-link" href="#" id="nav-apps" data-toggle="dropdown">应用</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Link 1</a>
-                    <a class="dropdown-item" href="#">Link 2</a>
-                    <a class="dropdown-item" href="#">Link 3</a>
+                    <a class="dropdown-item" href="#">日程提醒</a>
+                    <a class="dropdown-item" href="#">日记</a>
+                    <a class="dropdown-item" href="#">聊天</a>
                 </div>
             </li>
             <!-- 页面 -->
@@ -53,21 +52,23 @@
                 <i class="iconfont icon-page-nav" data-toggle="dropdown"></i>
                 <a class="nav-link" href="#" id="nav-pages" data-toggle="dropdown">页面</a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Link 1</a>
-                    <a class="dropdown-item" href="#">Link 2</a>
-                    <a class="dropdown-item" href="#">Link 3</a>
+                    <a class="dropdown-item" href="#">实践</a>
+                    <a class="dropdown-item" href="#">公共聊天室</a>
+                    <a class="dropdown-item" href="#">个人中心</a>
+                    <a class="dropdown-item" href="#">意见反馈</a>
                 </div>
             </li>
             <!-- 笔记 -->
             <li class="nav-item collapse navbar-collapse dropdown">
                 <i class="iconfont icon-zhixingjilu-nav" data-toggle="dropdown"></i>
                 <a class="nav-link" href="#" id="nav-notebook" data-toggle="dropdown">
-                    笔记
+                    分享
                 </a>
                 <div class="dropdown-menu">
-                    <a class="dropdown-item" href="#">Link 1</a>
-                    <a class="dropdown-item" href="#">Link 2</a>
-                    <a class="dropdown-item" href="#">Link 3</a>
+                    <a class="dropdown-item" href="#">博客</a>
+                    <a class="dropdown-item" href="#">风景</a>
+                    <a class="dropdown-item" href="#">视频</a>
+                    <a class="dropdown-item" href="#">新闻</a>
                 </div>
             </li>
         </ul>
@@ -1867,5 +1868,7 @@
 </div>
 <script src="/PCompus/static/js/vendor/vue.js"></script>
 <script src="/PCompus/static/js/pages/Dashboards.Default.js" type="module"></script>
+<script src="/PCompus/static/js/base/style.js"></script>
+<script src="/PCompus/static/js/base/common.js"></script>
 </body>
 </html>
