--- a/PCompus_controller/src/main/webapp/pages/Apps.Diary.html
+++ b/PCompus_controller/src/main/webapp/pages/Apps.Diary.html
@@ -18,7 +18,7 @@
     <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
-    <link href="/PCompus/static/css/vendor/bootstrap_css/bootstrap.min-2.3.1.css" rel="stylesheet" type="text/css"/>
+    <link href="/PCompus/static/css/vendor/bootstrap_css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="/PCompus/static/css/vendor/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="/PCompus/static/css/vendor/fullcalendar.min.css" rel="stylesheet" type="text/css"/>
     <link href="/PCompus/static/css/pages/Apps.Diary.css" rel="stylesheet" type="text/css"/>
