--- a/PCompus_controller/src/main/webapp/pages/Apps.TimeLine.html
+++ b/PCompus_controller/src/main/webapp/pages/Apps.TimeLine.html
@@ -18,7 +18,7 @@
     <meta content="" name="author"/>
 
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
-    <link href="/PCompus/static/css/vendor/bootstrap_css/bootstrap.min-2.3.1.css" rel="stylesheet" type="text/css"/>
+    <link href="/PCompus/static/css/vendor/bootstrap_css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
     <link href="/PCompus/static/css/vendor/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="/PCompus/static/css/pages/Apps.TimeLine.css" rel="stylesheet" type="text/css"/>
     <link rel="shortcut icon" href="media/image/favicon.ico"/>
@@ -48,7 +48,7 @@
                         <div class="timeline-content">
                             <img
                                     class="timeline-img pull-left"
-                                    src="media/image/2.jpg"
+                                    src="/PCompus/static/img/profile/profile-5.jpg"
                                     alt=""
                             />
 
@@ -85,7 +85,7 @@
                         <div class="timeline-content">
                             <img
                                     class="timeline-img pull-right"
-                                    src="media/image/1.jpg"
+                                    src="/PCompus/static/img/profile/profile-5.jpg"
                                     alt=""
                             />
 
@@ -122,7 +122,7 @@
                         <div class="timeline-content">
                             <img
                                     class="timeline-img pull-left"
-                                    src="media/image/3.jpg"
+                                    src="/PCompus/static/img/profile/profile-5.jpg"
                                     alt=""
                             />
 
@@ -164,7 +164,7 @@
                                 <p>
                                     <img
                                             class="timeline-img pull-right"
-                                            src="media/image/4.jpg"
+                                            src="/PCompus/static/img/profile/profile-5.jpg"
                                             alt=""
                                     />
 
@@ -191,7 +191,7 @@
                                 <p>
                                     <img
                                             class="timeline-img pull-left"
-                                            src="media/image/6.jpg"
+                                            src="/PCompus/static/img/profile/profile-5.jpg"
                                             alt=""
                                     />
 
@@ -241,7 +241,7 @@
                         <div class="timeline-content">
                             <img
                                     class="timeline-img pull-left"
-                                    src="media/image/5.jpg"
+                                    src="/PCompus/static/img/profile/profile-5.jpg"
                                     alt=""
                             />
 
@@ -306,7 +306,7 @@
                         <div class="timeline-content">
                             <img
                                     class="timeline-img pull-left"
-                                    src="media/image/2.jpg"
+                                    src="/PCompus/static/img/profile/profile-5.jpg"
                                     alt=""
                             />
 
