--- a/PCompus_controller/src/main/webapp/pages/Blocks.Authentication.Login.html
+++ b/PCompus_controller/src/main/webapp/pages/Blocks.Authentication.Login.html
@@ -21,6 +21,8 @@
     <link href="/PCompus/static/css/vendor/bootstrap_css/bootstrap.min-2.3.1.css" rel="stylesheet" type="text/css"/>
     <link href="/PCompus/static/css/vendor/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     <link href="/PCompus/static/css/pages/Blocks.Authentication.Login.css" rel="stylesheet" type="text/css"/>
+    <script src="/PCompus/static/js/vendor/vue.js"></script>
+
     <link rel="shortcut icon" href="media/image/favicon.ico"/>
 </head>
 
@@ -42,7 +44,7 @@
 <div class="content">
     <!-- BEGIN LOGIN FORM -->
 
-    <form class="form-vertical login-form" action="index.html">
+    <form class="form-vertical login-form" action="http://localhost:8080/PCompus/register" id="login-form">
         <h3 class="form-title">Login to your account</h3>
 
         <div class="alert alert-error hide">
@@ -65,6 +67,7 @@
                             type="text"
                             placeholder="Username"
                             name="username"
+                            v-model="user.userName"
                     />
                 </div>
             </div>
@@ -82,6 +85,7 @@
                             type="password"
                             placeholder="Password"
                             name="password"
+                            v-model="user.userPassword"
                     />
                 </div>
             </div>
@@ -123,7 +127,7 @@
 
     <!-- BEGIN FORGOT PASSWORD FORM -->
 
-    <form class="form-vertical forget-form" action="index.html">
+    <form class="form-vertical forget-form" action="http://localhost:8080/PCompus/register" method="post">
         <h3 class="">Forget Password ?</h3>
 
         <p>Enter your e-mail address below to reset your password.</p>
@@ -160,7 +164,7 @@
 
     <!-- BEGIN REGISTRATION FORM -->
 
-    <form class="form-vertical register-form" action="index.html">
+    <form class="form-vertical register-form" id="register-form">
         <h3 class="">Sign Up</h3>
 
         <p>Enter your account details below:</p>
@@ -176,7 +180,7 @@
                             class="m-wrap placeholder-no-fix"
                             type="text"
                             placeholder="Username"
-                            name="username"
+                            name="userName"
                     />
                 </div>
             </div>
@@ -264,9 +268,12 @@
             </button>
         </div>
     </form>
+
+
 </div>
 
 <div class="copyright">2013 &copy; Metronic. Admin Dashboard Template.</div>
+
 
 <script src="/PCompus/static/js/vendor/jquery-1.10.1.min.js" type="text/javascript"></script>
 
